Bug 208736 - printing does not allow page selection (range, set of pages)
Summary: printing does not allow page selection (range, set of pages)
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: part (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
: 208940 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-09-28 03:23 UTC by Laszlo Hazy
Modified: 2013-12-28 10:09 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Laszlo Hazy 2009-09-28 03:23:23 UTC
Version:           4.3.1 (using KDE 4.3.1)
OS:                Linux
Installed from:    Fedora RPMs

1. In the print dialog, the selector for which pages to print is no longer present. 

2. When printing, an empty page with one black square (size of a character) is all that comes out. Same issue in kate 3.3.1.

Printing works fine from the command line and from firefox.
Comment 1 John Layt 2009-09-29 21:51:48 UTC
For 1) this is deliberate as kate/kwrite does not currently have the ability to print a page range, so it was misleading users by showing it (see bug 160760).  You will need to raise a separate wishlist for this to be added.  To work around this in the meantime users need to highlight the text they want printed and use the Selection option in the dialog.

For 2) can you check for other KDE apps such as Konqueror print correctly?
Comment 2 Laszlo Hazy 2009-09-30 04:20:29 UTC
So I checked. A page that prints fine from firefox prints like garbage from konqueror. The pictures on the page print, although over multiple pages, while the text content just doesn't print. 

I also tried Okular (PDF viewer) and OpenOffice. They both print fine. If there is some kind of KDE print engine that sits between the KDE applications and the print server, then I guess it is buggy in KDE 4.3.1.
Comment 3 Dominik Haumann 2011-08-07 13:38:18 UTC
Laszlo Hazy: Can you please test again with KDE >= 4.6 and report back?
Printing works fine for me (no black bars).

Pages selection is still not implemented, though.
Comment 4 John Layt 2011-08-09 08:40:52 UTC
Page selection is actually now available when using CUPS as your printer backend on Linux
Comment 5 Dominik Haumann 2011-08-09 10:12:30 UTC
John, what does that mean for Kate? Can we close this? Or do we still need to implement something here?
Comment 6 John Layt 2011-08-09 13:29:41 UTC
Sorry, should have clarified.  There's a hack in the KDE print dialog that enables page ranges and page sets when running under Linux and using CUPS only. Basically kate/kwrite prints the entire document then CUPS does the page selection.  Under lpr or Windows or OSX then this hack does not work.  Also CUPS does not always apply the page selection as a user expects.  In short, it's a nice short-term hack to enable the feature, but long term it is better for Kate to paginate itself.  The hack just means its a lower priority fix.
Comment 7 Dominik Haumann 2011-08-11 12:40:02 UTC
*** Bug 208940 has been marked as a duplicate of this bug. ***
Comment 8 Michal Humpula 2013-12-28 10:08:55 UTC
Git commit 49b824532c5a1e51bed8f043a29b634f6885f47d by Michal Humpula.
Committed on 28/12/2013 at 10:08.
Pushed by michalhumpula into branch 'frameworks'.

enable page ranges for printing

M  +2    -0    part/printing/kateprinter.cpp
M  +24   -21   part/printing/printpainter.cpp
M  +1    -1    part/printing/printpainter.h

http://commits.kde.org/kate/49b824532c5a1e51bed8f043a29b634f6885f47d