enable page ranges for printing

BUG: 208736